2010-03-03  Stefano Lattarini  <stefano.lattarini@gmail.com>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Avoid generation of `tests/defs-p' file.
	* tests/defs.in: In the generated `configure.in' snippet: call
	`AM_INIT_AUTOMAKE' with the `parallel-tests' option if the shell
	variable `parallel_tests' is set to `yes'.
	* tests/Makefile.am (defs-p): Target removed.
	(check_SCRIPTS): Removed `defs-p'.
	(clean-local-check): Do not unlink `defs-p' anymore.
	($(parallel_tests)): Transformation rules for the test scripts
	adjusted.
	* tests/gen-parallel-tests: Selection rules for the test
	scripts adjusted.
	* tests/parallel-tests.test: Set `$parallel_tests' to `yes'
	then include `./defs' (rather than simply including `./defs-p').
	* tests/parallel-tests2.test: Likewise.
	* tests/parallel-tests3.test: Likewise.
	* tests/parallel-tests4.test: Likewise.
	* tests/parallel-tests5.test: Likewise.
	* tests/parallel-tests6.test: Likewise.
	* tests/parallel-tests7.test: Likewise.
	* tests/parallel-tests8.test: Likewise.
	* tests/parallel-tests9.test: Likewise.
	* tests/parallel-tests10.test: Likewise.
	* tests/README (Section "Writing Test Cases" subsection "Do"):
	Adjusted the parts referring to tests checking `parallel-tests'
	behaviour.  Some other minor related improvements.
	* tests/.gitignore (defs-p): Removed.

2010-03-04  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Remove redundant unset of variable TESTS from some test scripts.
	* tests/color.test: Do not unset the `TESTS' variable, as it's
	already unset in the `defs' file.
	* tests/check5.test: Likewise.
	* tests/check8.test: Likewise.
	* tests/check9.test: Likewise.
	* tests/check10.test: Likewise.
	* tests/check11.test: Likewise.
	* tests/parallel-tests.test: Likewise.
	* tests/parallel-tests3.test: Likewise.
	* tests/parallel-tests4.test: Likewise.
	* tests/parallel-tests5.test: Likewise.
	* tests/parallel-tests6.test: Likewise.
	* tests/parallel-tests7.test: Likewise.
