@@ -6468,7 +6468,7 @@ sub define_variable ($$$)
 
 
 # define_files_variable ($VAR, \@BASENAME, $EXTENSION, $WHERE)
-# -----------------------------------------------------------
+# ------------------------------------------------------------
 # Define the $VAR which content is the list of file names composed of
 # a @BASENAME and the $EXTENSION.
 sub define_files_variable ($\@$$)
@@ -6606,7 +6606,7 @@ sub define_per_target_linker_variable ($$)
 ################################################################
 
 # &check_trailing_slash ($WHERE, $LINE)
-# --------------------------------------
+# -------------------------------------
 # Return 1 iff $LINE ends with a slash.
 # Might modify $LINE.
 sub check_trailing_slash ($\$)
@@ -8017,7 +8017,7 @@ sub require_conf_file_with_macro ($$$@)
 ################################################################
 
 # &require_build_directory ($DIRECTORY)
-# ------------------------------------
+# -------------------------------------
 # Emit rules to create $DIRECTORY if needed, and return
 # the file that any target requiring this directory should be made
 # dependent upon.
