@@ -1,4 +1,5 @@
-# Copyright (C) 2003, 2004, 2005, 2006, 2007, 2008  Free Software Foundation, Inc.
+# Copyright (C) 2003, 2004, 2005, 2006, 2007, 2008, 2010 Free Software
+# Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -93,7 +94,7 @@ if absent, otherwise exit with error.
 
 # $FILE_NAME
 # find_file ($FILE_NAME, @INCLUDE)
-# -------------------------------
+# --------------------------------
 sub find_file ($@)
 {
   use File::Spec;
