@@ -1,4 +1,5 @@
-# Copyright (C) 2003, 2004, 2006, 2007, 2008, 2009  Free Software Foundation, Inc.
+# Copyright (C) 2003, 2004, 2006, 2007, 2008, 2009, 2010 Free Software
+# Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -234,7 +235,7 @@ Return 1 on error, 0 otherwise.
 
 # $BOOL
 # _process_option_list (\%OPTIONS, $WHERE, @OPTIONS)
-# -------------------------------------------------
+# --------------------------------------------------
 # Process a list of options.  Return 1 on error, 0 otherwise.
 # \%OPTIONS is the hash to fill with options data, $WHERE is
 # the location where @OPTIONS occurred.
