@@ -1,3 +1,11 @@
+2010-03-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Formatting cleanups in macro comments.
+	* automake.in, lib/Automake/Channels.pm,
+	lib/Automake/FileUtils.pm, lib/Automake/Options.pm,
+	lib/Automake/Variable.pm, lib/Automake/XFile.pm,
+	m4/options.m4, m4/substnot.m4: Fix macro comment format.
+
 2010-03-03  Stefano Lattarini  <stefano.lattarini@gmail.com>
 	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
